# XRayTaint-OfflineAnalysis

./: README.md
Cpp-v2/: Makefile
Cpp-v2/include/: RangeArray.h  TaintBitMap.h  xt_ByteTaintPropagate.h  xt_MemTaintBitmap.h  xt_alivebuffer.h  xt_blockdetect.h  xt_constant.h  xt_data.h  xt_detect.h  xt_detectAvalanche.h  xt_file.h  xt_flag.h  xt_functioncall.h  xt_liveness.h  xt_log.h  xt_modedetect.h  xt_node.h  xt_preprocess.h  xt_propagate.h  xt_record.h  xt_searchavalanche.h  xt_taintpropagate.h
Cpp-v2/src/: RangeArray.cpp  xt_MemTaintBitmap.cpp  xt_alivebuffer.cpp  xt_blockdetect.cpp  xt_detect.cpp  xt_detectAvalanche.cpp  xt_file.cpp  xt_functioncall.cpp  xt_liveness.cpp  xt_log.cpp  xt_main.cpp  xt_modedetect.cpp  xt_node.cpp  xt_preprocess.cpp  xt_propagate.cpp  xt_record.cpp  xt_search_propagate.cpp  xt_searchavalanche.cpp  xt_taintpropagate.cpp  xt_util.cpp
cpp-v2-cmake/: CMakeLists.txt
cpp-v2-cmake/include/: RangeArray.h  xt_ByteTaintPropagate.h  xt_aval_in_out.h  xt_blockdetect.h  xt_blockmodedetector.h  xt_cbcdetector.h  xt_constant.h  xt_data.h  xt_detect.h  xt_detectAvalanche.h  xt_file.h  xt_flag.h  xt_functioncall.h  xt_gentaintpropagate.h  xt_liveness.h  xt_modedetect.h  xt_node.h  xt_preprocess.h  xt_propagate.h  xt_searchavalanche.h  xt_taintpropagate.h  xt_util.h
cpp-v2-cmake/src/: RangeArray.cpp  xt_ByteTaintPropagate.cpp  xt_alivebuffer.cpp  xt_aval_in_out.cpp  xt_blockdetect.cpp  xt_blockmodedetector.cpp  xt_cbcdetector.cpp  xt_detect.cpp  xt_detectAvalanche.cpp  xt_file.cpp  xt_functioncall.cpp  xt_gentaintpropagate.cpp  xt_liveness.cpp  xt_log.cpp  xt_main.cpp  xt_modedetect.cpp  xt_preprocess.cpp  xt_propagate.cpp  xt_record.cpp  xt_taintpropagate.cpp  xt_util.cpp
cpp-v3/: CMakeLists.txt  Makefile
cpp-v3/include/: xt_avalanche.h  xt_constant.h  xt_contbuf.h  xt_data.h  xt_detector.h  xt_file.h  xt_flag.h  xt_liveness.h  xt_log.h  xt_node.h  xt_preprocess.h  xt_propagate.h  xt_rangearray.h  xt_record.h  xt_util.h
cpp-v3/src/: main.cpp  xt_avalanche.cpp  xt_contbuf.cpp  xt_detector.cpp  xt_file.cpp  xt_liveness.cpp  xt_log.cpp  xt_node.cpp  xt_preprocess.cpp  xt_propagate.cpp  xt_rangearray.cpp  xt_record.cpp  xt_util.cpp
